--- a/.directus/docker-compose.yaml
+++ b/.directus/docker-compose.yaml
@@ -1,49 +1,28 @@
 version: '3'
 services:
-  database:
-    image: postgis/postgis:13-master
-    # Required when running on platform other than amd64, like Apple M1/M2:
-    # platform: linux/amd64
-    ports:
-      - 5432:5432
-    volumes:
-      - ./data/database:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: 'directus'
-      POSTGRES_PASSWORD: 'directus'
-      POSTGRES_DB: 'directus'
-
-  cache:
-    image: redis:6
-
   directus:
-    image: directus/directus:10.8.3
+    image: directus/directus:10.9.2
     ports:
       - 8055:8055
     volumes:
       - ./uploads:/directus/uploads
       # If you want to load extensions from the host
       - ./extensions:/directus/extensions
-    depends_on:
-      - cache
-      - database
     environment:
-      KEY: '255d861b-5ea1-5996-9aa3-922530ec40b1'
-      SECRET: '6116487b-cda1-52c2-b5b5-c8022c45e263'
+      KEY: 'B807B41D-425F-41A4-AB7C-7FEDC2B10FF8'
+      SECRET: 'C576AE7E-3569-4E86-888E-662B4D1A6615'
 
       DB_CLIENT: 'pg'
-      DB_HOST: 'database'
+      DB_HOST: 'aws-0-us-east-1.pooler.supabase.com'
       DB_PORT: '5432'
-      DB_DATABASE: 'directus'
-      DB_USER: 'directus'
-      DB_PASSWORD: 'directus'
+      DB_DATABASE: 'postgres'
+      DB_USER: 'postgres.xgywygponsfjclsgakcn'
+      DB_PASSWORD: 'vxo*nvUPg2xogEzxrrvT3BRdyeM-yyqnVR'
 
       CACHE_ENABLED: 'false'
-      CACHE_STORE: 'redis'
-      REDIS: 'redis://cache:6379'
 
-      ADMIN_EMAIL: 'admin@example.com'
-      ADMIN_PASSWORD: 'd1r3ctu5'
+      ADMIN_EMAIL: 'tom@kenkeldesign.com'
+      ADMIN_PASSWORD: 'c/(JyQ27qhfuaXjYj6rut'
 
       # These is helpful for local developement but should probably be removed in production
       CORS_ENABLED: 'true'
@@ -56,4 +35,4 @@ services:
 
       # Make sure to set this in production
       # (see https://docs.directus.io/self-hosted/config-options#general)
-      # PUBLIC_URL: 'https://directus.example.com'
+      PUBLIC_URL: 'https://studio.kenkeldesign.com'
